# World-of-Gnome

./: .gitignore  .gitmodules  README.md
code/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  README  configure.ac  configure.in
code/client/: .gitignore  AUTHORS  CMakeLists.txt  Camera.cpp  Camera.h  CharacterMarquee.cpp  CharacterMarquee.h  EffectManager.cpp  EffectManager.h  Makefile.am  action.c  action.h  anim.c  anim.h  client.c  client.cpp  client_conf.cpp  client_conf.h  configure.ac  configure.in  draw.c  draw.h  equipment.c  equipment.h  file.c  file.h  file_client.c  file_client.cpp  file_client.h  game.glade  global.h  imageDB.c  imageDB.cpp  imageDB.h  inventory.c  inventory.h  item.c  item.h  login.glade  lua_client.cpp  (+50 more)
code/client/.deps/: action.Po  draw.Po  equipment.Po  file.Po  imageDB.Po  inventory.Po  main.Po  parser.Po  textview.Po  win_game.Po  win_login.Po  win_select_avatar.Po
code/client/DataManager/: DataManagerClient.cpp  DataManagerClient.h  FileStatus.cpp  FileStatus.h
code/client/FileManager/: FileReceivedObserver.h
code/client/ui/: ChatBox.cpp  ChatBox.h  ChatEditBox.cpp  ChatEditBox.h  ChatHistoryBox.cpp  ChatHistoryBox.h
code/common/: .gitignore  CMakeLists.txt  ChangeLog  Context.cpp  Context.h  ContextBis.cpp  ContextBis.h  ContextContainer.cpp  ContextContainer.h  ContextGetter.cpp  ContextGetter.h  ContextList.cpp  ContextList.h  DataManager.cpp  DataManager.h  Deserializer.cpp  Deserializer.h  Lock.cpp  Lock.h  LockGuard.cpp  LockGuard.h  Makefile.am  NetworkFrame.cpp  NetworkFrame.h  RunningAction.cpp  RunningAction.h  SdlLocking.cpp  SdlLocking.h  Selection.cpp  Selection.h  Serializer.cpp  Serializer.h  checksum.c  checksum.h  client_server.h  common.h  configure.ac  configure.in  const.h  context.c  (+46 more)
code/common/.deps/: checksum.Po  context.Po  entry.Po  log.Po  map.Po  network.Po
code/common/Context/: Context.cpp  Context.h  ContextContainer.cpp  ContextContainer.h  ContextGetter.cpp  ContextGetter.h
code/common/Network/: Connection.cpp  Connection.h  DataSent.cpp  DataSent.h  network.cpp  network.h
code/common/proto/: CMakeLists.txt  base.proto  wog.proto
code/common/protobuf/: CMakeLists.txt
code/output/: Legion_armor.lic  lpc_male_clothes_variety_0.lic
code/server/: .gitignore  CMakeLists.txt  COPYING  ChangeLog  Makefile.am  action.c  action.cpp  action.h  attribute.c  attribute.cpp  attribute.h  avatar.c  avatar.h  character.c  character.cpp  character.h  configure.ac  configure.in  context_server.cpp  context_server.h  equipment.c  equipment.cpp  equipment.h  global.h  inventory.c  inventory.cpp  inventory.h  item.c  item.h  main.c  main_server.c  main_server.cpp  map_server.c  map_server.cpp  map_server.h  network_server.c  network_server.cpp  network_server.h  npc.c  npc.cpp  (+8 more)
code/server/.deps/: action.Po  attribute.Po  avatar.Po  equipment.Po  inventory.Po  item.Po  main.Po  npc.Po  parser.Po
code/tools/: create_map.sh
data/demo00/: client.json  credits.txt
data/demo00/action/: add_black  add_white  disarm_trap  drop_item  eat_apple  get  get_apple  hit  move_up  remove_equip  remove_life  select_character  set_trap  wear_equip
data/demo00/avatar/: gob  human
data/demo00/character/: A0000  A0001  bob_char1  bob_char2  bobz_yip  test  test2  titi_yep  titi_yup  toto_yip  toto_yop  zed_char1  zed_char2
data/demo00/character_template/: black_ball  gob  gray_ball  human  white_ball
data/demo00/characters/: A0000  A0001  titi_yup  toto_yip  toto_yop
data/demo00/item/: A0000  A0001  A0007  hat
data/demo00/map/: map1  map2  test  test2
data/demo00/script/: add_black.lua  add_white.lua  ai_path.lua  ai_random.lua  disarm_trap.lua  drop_item.lua  eat_apple.lua  get.lua  get_apple.lua  goto_map1.lua  goto_map2.lua  goto_test.lua  goto_test2.lua  hit.lua  kill.lua  move.lua  move_down.lua  move_left.lua  move_right.lua  move_up.lua  remove_equip.lua  remove_life.lua  say_hello.lua  select_tile.lua  set_trap.lua  trap.lua  wear_equip.lua
data/demo00/tile/: 0  1  2
data/demo00/user/: bob  zed
data/demo01/: client.conf  credits.txt
data/demo01/action/: add_black  add_black_dragon  add_dolphin  add_dungeon  add_dungeon_floor  add_dungeon_wall  add_flower  add_ground  add_sea  add_skeleton  drop_item  get_apple  hit  move_up_left  remove_equip  remove_life  select_inventory  wear_equip
data/demo01/avatar/: god  human  lich
data/demo01/character/: bob_flop  bob_fyr  bob_terrus  toto_flop  toto_fyr  toto_terrus  zed_chiriu  zed_morg
data/demo01/character_template/: black_dragon  dolphin  flower1  flower2  flower3  gob  god  human  lich  skeleton
data/demo01/characters/: toto_fyr  toto_terrus
data/demo01/map/: map1
data/demo01/script/: add_dolphin.lua  add_dungeon.lua  add_ground.lua  add_skeleton.lua  aggro_say_hello.lua  ai_random.lua  disarm_trap.lua  goto.lua  goto_A00000.lua  goto_map1.lua  kill.lua  move.lua  move_down.lua  move_left.lua  move_right.lua  remove_equip.lua  select_equipment.lua
data/demo01/tile/: dungeon_down  dungeon_ground  dungeon_up  dungeon_wall  ground  sea
data/demo01/user/: bob  bobz  toto  zed
data/demo01/users/: toto
data/demo02/: client.conf  credits.txt
data/demo02/action/: add_black  add_white  disarm_trap  drop_item  eat_apple  get  get_apple  hit  move_down_right  move_up  move_up_right  remove_equip  remove_life  select_equipment  select_inventory  select_tile  set_trap  speak  wear_equip
data/demo02/avatar/: gob
data/demo02/character/: A0000  A0001  bob_jahl  bob_rig  bobz_yip  titi_yep  titi_yup  toto_yip  toto_yop  zed_gil  zed_sli
data/demo02/character_template/: gob  human
data/demo02/characters/: A0000  A0001  titi_yep  toto_yip  toto_yop
data/demo02/item/: A0000  A0003  A0004  A0005  A0006  apple
data/demo02/map/: Map_11  (+5 more)
data/demo03/: client.conf  client.json  credits.txt
data/demo04/: client.conf  client.json  credits.txt
data/demo05/: client.conf  client.json  credits.txt
data/demo07/: client.conf  client.json
data/demo08/: client.conf  client.json  credits.txt
data/demo09/: client.conf  credits.txt
(+7235 files in other folders)
