SUBDIRS = common server client

# Distribute files from here.
EXTRA_DIST = server/AUTHORS server/ChangeLog server/configure.in server/COPYING server/INSTALL server/Makefile.am server/NEWS server/README\
client/AUTHORS client/ChangeLog client/configure.in client/COPYING client/INSTALL client/Makefile.am client/NEWS client/README\
common/const.h common/protocol.h
