SUBDIRS = sdl_item common server client

# Distribute files from here.
EXTRA_DIST = server/AUTHORS server/ChangeLog server/configure.ac server/COPYING server/INSTALL server/Makefile.am server/NEWS server/README\
client/AUTHORS client/ChangeLog client/configure.ac client/COPYING client/INSTALL client/Makefile.am client/NEWS client/README\
common/AUTHORS common/ChangeLog common/configure.ac common/COPYING common/INSTALL common/Makefile.am common/NEWS common/README\
AUTHORS ChangeLog configure.ac COPYING INSTALL Makefile.am NEWS README
