bin_PROGRAMS=wog_client
wog_client_SOURCES=main_client.cpp parser_client.cpp file_client.cpp imageDB.cpp client.cpp textview.cpp scr_select.cpp screen.cpp scr_play.cpp network_client.cpp ui_play.cpp option_client.cpp

wog_client_LDADD=../common/libcommon.a ../sdl_item/libsdl_item.a $(ADD_LIB)

wog_clientdir = $(datadir)/wog/client

dist_noinst_HEADERS = parser.h file.h imageDB.h screen.h scr_select.h scr_play.h network_client.h ui_play.h option_client.h
