noinst_LIBRARIES=libcommon.a
libcommon_a_SOURCES=util.cpp context.cpp network.cpp map.cpp entry.cpp log.cpp mutex.cpp item.cpp file.cpp list.cpp fifo.cpp font.cpp sfx.cpp
libcommon_a_LIBADD=$(ADD_LIB)
libcommon_a_CFLAGS = $(AM_CFLAGS)

dist_noinst_HEADERS = util.h const.h syntax.h protocol.h context.h common.h network.h map.h entry.h log.h mutex.h item.h file.h list.h syntax.h fifo.h font.h sfx.h
