bin_PROGRAMS=wog_server
wog_server_SOURCES=main_server.cpp parser_server.cpp character.cpp server.cpp npc.cpp action.cpp equipment.cpp inventory.cpp attribute.cpp network_server.cpp map_server.cpp
wog_server_LDADD=../common/libcommon.a $(ADD_LIB)

dist_noinst_HEADERS = parser.h character.h npc.h action.h equipment.h inventory.h attribute.h network_server.h map_server.h
